--- a/tutorial/templates/website/index.html
+++ b/tutorial/templates/website/index.html
@@ -5,4 +5,6 @@
 
 {% comment %} {% block content %} <h1>Home Page</h1> {% endblock %} {% endcomment %}
 
-{% block content %} <h1 class="text-3xl">Home Page-tailwind</h1> {% endblock %}
+{% block content %} <h1 class="bg-purple-600 text-white p-4 text-3xl">Home Page-tailwind</h1> 
+<p class ="bg-blue-700 text-white p-4 text-pink-100xl"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, officiis. </p>
+{% endblock %} 
