--- a/tutorial/templates/layout.html
+++ b/tutorial/templates/layout.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Default value{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href= "{% static 'style.css' %}">
     {% tailwind_css %}
 </head>
 <body>
-    <nav>This is our nav</nav>
+    <nav class="bg-pink-500 text-white p-4">This is our nav</nav>
     {% block content %}{% endblock %}
 </body>
 </html>
