--- a/tutorial/theme/templates/base.html
+++ b/tutorial/theme/templates/base.html
@@ -12,7 +12,7 @@
 	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 		<div class="container mx-auto">
 			<section class="flex items-center justify-center h-screen">
-				<h1 class="bg-blue-500 text-white p-4 text-5xl">Django + Tailwind = ❤️</h1>
+				<h1 class=" text-white p-4 text-5xl">Django + Tailwind = ❤️</h1>
 			</section>
 		</div>
 	</body>
